--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
                             </div>
                         </div>
                         <div class="project">
-                            <img src="images/Project.png">
+                            <img src="images/repair_man.jpeg">
                             <div class="layer">
-                                <h3>Project 3</h3>
-                                <p>This is what the third project does</p>
-                                <a href="#"> <i class="fas fa-external-link-alt"></i> </a>
+                                <h3>Coffee Repairs Web</h3>
+                                <p> Built a responsive React website with Tailwind CSS for a coffee machine repair client.</p>
+                                <a href="http://owen-chare-coffee-machine-services.netlify.app"> <i class="fas fa-external-link-alt"></i> </a>
                             </div>
                         </div>
                         <div class="project">
