updated linkedin link

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                        <i class="fas fa-download"></i><a href="assets/Resume.pdf" download class="butt"> Download Resume</a>
                     </p>
                     <p>
-                      <i class="fas fa-phone"></i><a href="tel:+27840272766"> +27 84 027 2766</a> |  <i class="fas fa-envelope"></i><a href="mailto:shabalalantsako57@gmail.com"> Email </a> |  <i class="fab fa-github"></i></i><a href="https://github.com/ntsako718"> GitHub</a> |  <i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/ntsako-shabalala ">LinkedIn</a>
+                      <i class="fas fa-phone"></i><a href="tel:+27840272766"> +27 84 027 2766</a> |  <i class="fas fa-envelope"></i><a href="mailto:shabalalantsako57@gmail.com"> Email </a> |  <i class="fab fa-github"></i></i><a href="https://github.com/ntsako718"> GitHub</a> |  <i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/ntsako-shabalala-7bab4834a/">LinkedIn</a>
                     </p>
                 </section>
             </div>
