--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
                     My background in science helps me approach code with a systems-thinking mindset and gives me a unique perspective
                     in solving problems — especially in projects that blend technology and education.
                 </p>
+                <p>
+                    In biochemistry, I saw how structure emerges from sequence — how a strand of amino acids folds into functional life. 
+                    That principle stuck with me: <strong>form follows logic</strong>. Now, as a developer, I write sequences too — just 
+                    in code. Different tools, same mindset: decode the system, understand the pattern, build with purpose.
+                </p>
+
                 </section>
 
 
