--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <h2>My Journey</h2>
                 <p>
                     Before I started coding, I pursued a degree in Biological Sciences, majoring in Biochemistry and Chemistry.
-                    It taught me how to think analytically, observe carefully, and understand complex systems — skills that translate
+                    It taught me how to think analytically, observe carefully, and understand complex systems, skills that translate
                     surprisingly well into programming.
                 </p>
                 <p>
@@ -67,11 +67,11 @@
                 </p>
                 <p>
                     My background in science helps me approach code with a systems-thinking mindset and gives me a unique perspective
-                    in solving problems — especially in projects that blend technology and education.
+                    in solving problems, especially in projects that blend technology and education.
                 </p>
                 <p>
-                    In biochemistry, I saw how structure emerges from sequence — how a strand of amino acids folds into functional life. 
-                    That principle stuck with me: <strong>form follows logic</strong>. Now, as a developer, I write sequences too — just 
+                    In biochemistry, I saw how structure emerges from sequence, how a strand of amino acids folds into functional life. 
+                    That principle stuck with me: form follows logic. Now, as a developer, I write sequences too, just 
                     in code. Different tools, same mindset: decode the system, understand the pattern, build with purpose.
                 </p>
 
